# aid

./: alembic.ini  convert_code_cvs.py  credentials.py  database.py  explore_disease_list.py  insert_data.py  models.py  pyproject.toml  scraping_idc10cm.py
alembic/: env.py
alembic/versions/: 0853699e1569_create_diseases_table.py  0b4a7fa82c8b_update_disease_calumn.py  2db2e1f71776_update_diseases_table.py  763a68d20354_update_icd_column.py  a3d04c5a6839_create_diseases_table.py  f1d745ff3dfb_create_users_table.py
models/: users.py
