[tool.poetry]
name = "AID"
version = "0.1.0"
description = ""
authors = ["bbaykam <basarbaykam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3"
psycopg2 = "^2.8"
alembic = "^1.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
