[tool.poetry]
name = "AID"
version = "0.1.0"
description = ""
authors = ["bbaykam <basarbaykam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
sqlalchemy = "^1.3"
psycopg2 = "^2.8"
alembic = "^1.2"
sqlalchemy-models = "^0.0.6"
urllib3 = "^1.25"
BeautifulSoup4 = "^4.8"
html5lib = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
